--- a/package.json
+++ b/package.json
@@ -3,8 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@coreui/coreui": "^5.0.0-beta.2",
-    "@coreui/react": "^5.0.0-beta.1",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.14.15",
@@ -14,10 +12,11 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.1",
     "react": "^18.2.0",
-    "react-alice-carousel": "^2.8.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.17.0",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.29.0",
+    "slick-carousel": "^1.8.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
